# serine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/: main.dox
include/serine/: Archiver.hpp  Container.hpp  DynByteArray.hpp  MemoryArchiver.hpp  RawArchiver.hpp  Serializable.hpp  StlContainer.hpp  serine.hpp
src/: MemoryArchiver.cpp  RawArchiver.cpp
tests/: MemoryArchiverTest.cpp
